--- a/css/styles.css
+++ b/css/styles.css
@@ -285,6 +285,9 @@ body {
 
     padding: 72px 0;
     text-align: center;
+
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
 @media (min-resolution: 192dpi) {
@@ -370,6 +373,7 @@ body {
     letter-spacing: 0.02em;
     color: var(--navy-blue);
     margin-bottom: 8px;
+    text-align: center;
 }
 
 .features-text {
@@ -418,6 +422,7 @@ body {
     .features-subtitle {
         font-size: 20px;
         font-weight: 500;
+        text-align: left;
     }
 
     .features-text {
@@ -444,7 +449,7 @@ body {
 .team-grid {
     display: flex;
     flex-wrap: wrap;
-    gap: 64px 24px;
+    gap: 72px 24px;
     justify-content: center;
 }
 
@@ -559,6 +564,11 @@ body {
 .portfolio-card {
     background-color: var(--white);
     border: 1px solid var(--cornflower);
+
+    box-shadow:
+            0 2px 1px rgba(46, 47, 66, 0.08),
+            0 1px 1px rgba(46, 47, 66, 0.16),
+            0 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-thumb {
@@ -724,17 +734,24 @@ body {
 }
 
 .footer-subscribe-input {
-    width: 264px;
+    width: 288px;
     height: 40px;
     padding-left: 16px;
     border-radius: 4px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
+    border: 1px solid #fff;
     background-color: transparent;
     color: var(--white);
 }
 
 .footer-subscribe-input::placeholder {
+    font-size: 12px;
+    line-height: 2;
     color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-subscribe-input:focus {
+    border-color: var(--green);
+    outline: none;
 }
 
 .footer-subscribe-btn {
@@ -767,7 +784,7 @@ body {
 }
 
 .footer-info {
-    text-align: left;
+    text-align: center;
 }
 
 @media screen and (min-width: 768px) {
@@ -780,6 +797,7 @@ body {
     }
     .footer-info {
         max-width: 264px;
+        text-align: left;
     }
 
     .footer-social {
@@ -856,6 +874,11 @@ body {
     border-radius: 4px;
     padding: 72px 16px 24px;
     position: relative;
+
+    box-shadow:
+            0 1px 1px rgba(0, 0, 0, 0.14),
+            0 1px 3px rgba(0, 0, 0, 0.12),
+            0 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .modal-close {
@@ -936,6 +959,11 @@ body {
     fill: var(--iris);
 }
 
+.modal-input:focus,
+.modal-textarea:focus {
+    border-color: var(--iris);
+}
+
 .modal-input::placeholder {
     font-size: 12px;
     line-height: 1.16;
@@ -950,10 +978,11 @@ body {
 
 .modal-close:hover,
 .modal-close:focus {
-    background-color: var(--iris);
-    border: none;
+    background-color: var(--cornflower);
+    border: 1px solid rgba(0, 0, 0, 0.1);
     border-color: var(--iris);
 }
+
 
 .modal-close:hover .modal-close-icon,
 .modal-close:focus .modal-close-icon {
@@ -990,7 +1019,7 @@ body {
 }
 
 .modal-checkbox-input:checked+.modal-checkbox-label .modal-checkbox-custom {
-    background-color: var(--iris);
+    background-color: var(--ocean);
     border: none;
 }
 
@@ -1013,7 +1042,7 @@ body {
     gap: 8px;
 
     font-size: 12px;
-    line-height: 1.16;
+    line-height: 1.33;
     letter-spacing: 0.04em;
     color: var(--light-slate);
 }
@@ -1169,7 +1198,7 @@ body {
 }
 
 .mobile-menu-phone {
-    font-weight: 700;
+    font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     color: var(--iris);
@@ -1177,8 +1206,8 @@ body {
 
 .mobile-menu-email {
     font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
+    font-size: 20px;
+    line-height: 1.2;
     color: var(--slate);
 }
 
